SET (COMPILE_GUI TRUE CACHE BOOL "Compile GUI?")

IF (COMPILE_GUI)

  INCLUDE_DIRECTORIES(${SHEET_INCLUDE_DIRS})
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/ssrender/include)
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/widesheet)

  # May need icons for windows
  SET (DECOR)
  if(MINGW)
    FIND_PROGRAM(windres_bin NAMES windres i586-mingw32msvc-windres)
    MESSAGE(STATUS "windres: ${windres_bin}")
    IF (windres_bin)
      set(CMAKE_RC_COMPILER ${windres_bin})
      SET(CMAKE_RC_OUTPUT_EXTENSION .obj)  # doesn't work, for some reason...
      SET(CMAKE_RC_COMPILE_OBJECT
        "<CMAKE_RC_COMPILER> --output-format=coff -I${CMAKE_CURRENT_SOURCE_DIR}/src -I${CMAKE_CURRENT_SOURCE_DIR} -o <OBJECT> <SOURCE>")
      ENABLE_LANGUAGE(RC)
      set(DECOR src/decor.rc)
    ELSE (windres_bin)
      MESSAGE(STATUS "Cannot find windres, ignoring program icon on windows")
    ENDIF (windres_bin)
  endif(MINGW)

  set(wxWidgets_CONFIGURATION mswu)
  if (MINGW)
    set(MSYS TRUE)
  endif()
  find_package(wxWidgets COMPONENTS core base net REQUIRED)
  include(${wxWidgets_USE_FILE})
  IF (wxWidgets_FOUND)
    INCLUDE_DIRECTORIES(${wxWidgets_INCLUDE_DIRS})
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
    
    SET(targ coopy)
    ADD_EXECUTABLE(${targ} WIN32 src/${targ}.cpp src/MergeFrame.cpp src/MergeFrame.h ${DECOR})
    LINK_DIRECTORIES(${wxWidgets_LIBRARY_DIRS})
    TARGET_LINK_LIBRARIES(${targ} ${wxWidgets_LIBRARIES})
    SET_PROPERTY(TARGET ${targ} 
      PROPERTY COMPILE_DEFINITIONS ${wxWidgets_DEFINITIONS})
    IF (NOT MINGW)
      IF (NOT APPLE)
	TARGET_LINK_LIBRARIES(${targ} X11)
      ENDIF ()
    ENDIF (NOT MINGW)
    INSTALL(TARGETS ${targ} COMPONENT wizard DESTINATION bin)
    TARGET_LINK_LIBRARIES(${targ} coopy_widesheet)
    TARGET_LINK_LIBRARIES(${targ} coopy_full)

    if (INSTALL_GNUMERIC AND MINGW)
      SET(PERMS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
      foreach (need wxbase30u_gcc_custom.dll wxbase30u_net_gcc_custom.dll wxmsw30u_core_gcc_custom.dll mingwm10.dll)
	set(done FALSE)
	foreach (dir ${wxWidgets_LIBRARY_DIRS} /usr/share/doc/mingw32-runtime)
	  if (NOT done AND EXISTS ${dir}/${need})
	    install(FILES ${dir}/${need} DESTINATION bin PERMISSIONS ${PERMS} COMPONENT wizard)
            message(STATUS ${dir} ${need})
	    set(done TRUE)
	  endif()
	endforeach()
      endforeach()
    endif()
    
  ELSE (wxWidgets_FOUND)
    MESSAGE(STATUS "Skipping GUI, wxWidgets not found")
  ENDIF (wxWidgets_FOUND)
ENDIF (COMPILE_GUI)

